add resume and contact buttons

--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
         </div>
       </div>
     </nav>
+    <section id="profile">
+      <div class="section__pic-container">
+        <img src="./assets/profile-pic.png" alt="Quincy Claytor" />
+      </div>
+      <div class="section__text">
+        <p class="section-text-p1">Hello, Im</p>
+        <h1 class="title">Quincy Claytor</h1>
+        <p class="section-text-p2">
+          A Full Stack Developer based in the United States.</p>
+    </section>
+    <div class="btn-container">
+      <button type="button" class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')"> Download CV </button>
+      <button type="button" class="btn btn-color-1" onclick="location.href='./#contact'"> Contact Me </button>
+    </div>
   </body>
   <script src="script.js"></script>
 </html>
